--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "type": "module",
   "engines": {
-    "node": ">=18.0",
+    "node": "18 || 20",
     "npm": ">=8.0"
   },
   "scripts": {
@@ -46,43 +46,43 @@
     "@emotion/eslint-plugin": "11.11.0",
     "@julr/vite-plugin-validate-env": "0.2.4",
     "@mswjs/data": "github:noveogroup-amorgunov/mswjs-data#feat-persist-extension",
-    "@swc/plugin-emotion": "2.5.70",
-    "@tanstack/eslint-plugin-query": "4.32.1",
+    "@swc/plugin-emotion": "2.5.76",
+    "@tanstack/eslint-plugin-query": "4.34.1",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@total-typescript/ts-reset": "0.4.2",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.18",
+    "@total-typescript/ts-reset": "0.5.1",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.2.1",
-    "@typescript-eslint/parser": "6.2.1",
+    "@typescript-eslint/eslint-plugin": "6.6.0",
+    "@typescript-eslint/parser": "6.6.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "@vitest/ui": "0.31.4",
     "confusing-browser-globals": "1.0.11",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.9.0",
-    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-import-resolver-typescript": "3.6.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.28.0",
-    "eslint-plugin-jest-dom": "5.0.1",
+    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-jest-dom": "5.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.33.1",
+    "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-testing-library": "5.11.0",
+    "eslint-plugin-testing-library": "6.0.1",
     "eslint-plugin-unicorn": "48.0.1",
-    "eslint-plugin-vitest": "0.2.8",
+    "eslint-plugin-vitest": "0.3.1",
     "husky": "8.0.3",
-    "i18next-parser": "8.3.0",
+    "i18next-parser": "8.7.0",
     "jsdom": "22.1.0",
-    "jsdom-testing-mocks": "1.9.0",
-    "lint-staged": "13.2.3",
-    "msw": "1.2.3",
-    "prettier": "3.0.0",
+    "jsdom-testing-mocks": "1.10.0",
+    "lint-staged": "14.0.1",
+    "msw": "1.3.0",
+    "prettier": "3.0.3",
     "rollup-plugin-visualizer": "5.9.2",
     "source-map-explorer": "2.5.3",
-    "typescript": "5.1.6",
-    "vite": "4.4.8",
-    "vite-plugin-checker": "0.6.1",
+    "typescript": "5.2.2",
+    "vite": "4.4.9",
+    "vite-plugin-checker": "0.6.2",
     "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "3.2.0",
     "vite-tsconfig-paths": "4.2.0",
@@ -90,30 +90,30 @@
     "vitest-dom": "0.1.0"
   },
   "dependencies": {
-    "@ant-design/icons": "5.2.4",
+    "@ant-design/icons": "5.2.6",
     "@emotion/react": "11.11.1",
-    "@sindresorhus/is": "5.6.0",
-    "@tanstack/react-query": "4.32.1",
-    "@tanstack/react-query-devtools": "4.32.1",
+    "@sindresorhus/is": "6.0.0",
+    "@tanstack/react-query": "4.35.0",
+    "@tanstack/react-query-devtools": "4.35.0",
     "@tshttp/status": "2.0.0",
-    "antd": "5.8.1",
+    "antd": "5.9.0",
     "dayjs": "1.11.9",
     "deepmerge-ts": "5.1.0",
-    "i18next": "23.4.1",
+    "i18next": "23.5.1",
     "i18next-browser-languagedetector": "7.1.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "4.0.10",
-    "react-i18next": "13.0.3",
-    "react-router-dom": "6.14.2",
+    "react-error-boundary": "4.0.11",
+    "react-i18next": "13.2.2",
+    "react-router-dom": "6.15.0",
     "recoil": "0.7.7",
     "recoil-nexus": "0.5.0",
     "recoil-persist": "5.1.0",
     "use-debounce": "9.0.4",
     "use-query-params": "2.2.1",
     "use-react-router-breadcrumbs": "4.0.1",
-    "zod": "3.21.4",
+    "zod": "3.22.2",
     "zod-fetch": "0.1.1"
   }
 }
