Add Legacy plugin

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'dist/assets/*.js' --no-border-checks",
     "visualize": "export VISUALIZE=true && npm run build",
-    "build": "vite build",
+    "build": "vite build --debug",
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
@@ -56,6 +56,7 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "6.6.0",
     "@typescript-eslint/parser": "6.6.0",
+    "@vitejs/plugin-legacy": "4.1.1",
     "@vitejs/plugin-react-swc": "3.3.2",
     "@vitest/ui": "0.31.4",
     "confusing-browser-globals": "1.0.11",
@@ -80,6 +81,7 @@
     "prettier": "3.0.3",
     "rollup-plugin-visualizer": "5.9.2",
     "source-map-explorer": "2.5.3",
+    "terser": "5.19.4",
     "typescript": "5.2.2",
     "vite": "4.4.9",
     "vite-plugin-checker": "0.6.2",
