--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "vite-plugin-checker": "0.6.2",
     "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "3.2.0",
-    "vite-tsconfig-paths": "4.2.0",
+    "vite-plugin-top-level-await": "1.3.1",
+    "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.31.4",
     "vitest-dom": "0.1.0"
   },
