--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
     "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0",
-    "preview": "vite preview",
+    "preview": "vite build && vite preview --port 3000",
     "start": "vite",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -87,7 +87,6 @@
     "vite-plugin-checker": "0.6.2",
     "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "3.2.0",
-    "vite-plugin-top-level-await": "1.3.1",
     "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.31.4",
     "vitest-dom": "0.1.0"
