--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0",
     "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
     "start": "vite",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
+    "test": "DEBUG_PRINT_LIMIT=100000 vitest",
+    "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
     "prepare": "husky install"
   },
   "lint-staged": {
