Vitest-dom -> jest-dom & remove recoil-nexus

--- a/package.json
+++ b/package.json
@@ -48,17 +48,18 @@
     "@mswjs/data": "github:noveogroup-amorgunov/mswjs-data#feat-persist-extension",
     "@swc/plugin-emotion": "2.5.83",
     "@tanstack/eslint-plugin-query": "4.34.1",
+    "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.5.1",
     "@total-typescript/ts-reset": "0.5.1",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.21",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "6.7.0",
-    "@typescript-eslint/parser": "6.7.0",
+    "@typescript-eslint/eslint-plugin": "6.7.2",
+    "@typescript-eslint/parser": "6.7.2",
     "@vitejs/plugin-legacy": "4.1.1",
     "@vitejs/plugin-react-swc": "3.3.2",
-    "@vitest/ui": "0.31.4",
+    "@vitest/ui": "0.34.4",
     "confusing-browser-globals": "1.0.11",
     "eslint": "8.49.0",
     "eslint-config-prettier": "9.0.0",
@@ -88,8 +89,7 @@
     "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "3.2.0",
     "vite-tsconfig-paths": "4.2.1",
-    "vitest": "0.31.4",
-    "vitest-dom": "0.1.0"
+    "vitest": "0.34.4"
   },
   "dependencies": {
     "@ant-design/icons": "5.2.6",
@@ -110,7 +110,6 @@
     "react-i18next": "13.2.2",
     "react-router-dom": "6.16.0",
     "recoil": "0.7.7",
-    "recoil-nexus": "0.5.0",
     "recoil-persist": "5.1.0",
     "use-debounce": "9.0.4",
     "use-query-params": "2.2.1",
