--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "jsdom": "22.1.0",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "14.0.1",
-    "msw": "1.3.1",
+    "msw": "0.0.0-fetch.rc-24",
     "prettier": "3.0.3",
     "rollup-plugin-visualizer": "5.9.2",
     "source-map-explorer": "2.5.3",
