--- a/package.json
+++ b/package.json
@@ -97,10 +97,10 @@
   "dependencies": {
     "@ant-design/icons": "5.2.6",
     "@emotion/react": "11.11.1",
+    "@reflet/http": "1.0.0",
     "@sindresorhus/is": "6.0.1",
     "@tanstack/react-query": "5.0.0",
     "@tanstack/react-query-devtools": "5.0.3",
-    "@tshttp/status": "2.0.0",
     "antd": "5.10.2",
     "dayjs": "1.11.10",
     "deepmerge-ts": "5.1.0",
