--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@julr/vite-plugin-validate-env": "0.2.4",
     "@mswjs/data": "0.14.0",
     "@swc/plugin-emotion": "2.5.92",
-    "@tanstack/eslint-plugin-query": "5.0.0",
+    "@tanstack/eslint-plugin-query": "5.0.5",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
@@ -64,7 +64,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-import": "2.29.0",
     "eslint-plugin-jest-dom": "5.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.33.2",
@@ -72,13 +72,13 @@
     "eslint-plugin-react-prefer-function-component": "3.3.0",
     "eslint-plugin-testing-library": "6.1.0",
     "eslint-plugin-unicorn": "48.0.1",
-    "eslint-plugin-vitest": "0.3.6",
+    "eslint-plugin-vitest": "0.3.8",
     "husky": "8.0.3",
     "i18next-parser": "8.9.0",
     "jsdom": "22.1.0",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.0.2",
-    "msw": "0.0.0-fetch.rc-24",
+    "msw": "2.0.0",
     "prettier": "3.0.3",
     "rollup-plugin-visualizer": "5.9.2",
     "source-map-explorer": "2.5.3",
@@ -96,8 +96,8 @@
     "@emotion/react": "11.11.1",
     "@reflet/http": "1.0.0",
     "@sindresorhus/is": "6.0.1",
-    "@tanstack/react-query": "5.0.0",
-    "@tanstack/react-query-devtools": "5.0.3",
+    "@tanstack/react-query": "5.0.5",
+    "@tanstack/react-query-devtools": "5.0.5",
     "antd": "5.10.2",
     "dayjs": "1.11.10",
     "deepmerge-ts": "5.1.0",
