--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-prefer-function-component": "3.3.0",
+    "eslint-plugin-sonarjs": "0.22.0",
     "eslint-plugin-testing-library": "6.1.0",
     "eslint-plugin-unicorn": "49.0.0",
     "eslint-plugin-vitest": "0.3.8",
