Replace Recoil with Jotai

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@eslint-community/eslint-plugin-eslint-comments": "4.1.0",
     "@julr/vite-plugin-validate-env": "0.2.4",
     "@mswjs/data": "0.15.0",
+    "@swc-jotai/debug-label": "0.1.0",
+    "@swc-jotai/react-refresh": "0.1.0",
     "@swc/plugin-emotion": "2.5.96",
     "@tanstack/eslint-plugin-query": "5.0.5",
     "@testing-library/jest-dom": "6.1.4",
@@ -73,7 +75,7 @@
     "eslint-plugin-sonarjs": "0.22.0",
     "eslint-plugin-testing-library": "6.1.0",
     "eslint-plugin-unicorn": "49.0.0",
-    "eslint-plugin-vitest": "0.3.8",
+    "eslint-plugin-vitest": "0.3.9",
     "husky": "8.0.3",
     "i18next-parser": "8.9.0",
     "jsdom": "22.1.0",
@@ -104,14 +106,14 @@
     "deepmerge-ts": "5.1.0",
     "i18next": "23.6.0",
     "i18next-browser-languagedetector": "7.1.0",
+    "jotai": "2.5.0",
+    "jotai-devtools": "0.7.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.11",
     "react-i18next": "13.3.1",
     "react-router-dom": "6.18.0",
-    "recoil": "0.7.7",
-    "recoil-persist": "5.1.0",
     "use-debounce": "9.0.4",
     "use-query-params": "2.2.1",
     "use-react-router-breadcrumbs": "4.0.1",
