Refactor theme, use user's preferred theme

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "visualstudioexptteam.vscodeintellicode",
+    "yoavbls.pretty-ts-errors",
     "zixuanchen.vitest-explorer"
   ]
 }
