--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "@ant-design/icons": "5.2.6",
     "@emotion/react": "11.11.1",
     "@reflet/http": "1.0.0",
-    "@sindresorhus/is": "6.1.0",
-    "@tanstack/react-query": "5.8.4",
-    "@tanstack/react-query-devtools": "5.8.4",
+    "@tanstack/react-query": "5.8.6",
+    "@tanstack/react-query-devtools": "5.8.6",
     "antd": "5.11.3",
     "dayjs": "1.11.10",
     "deepmerge-ts": "5.1.0",
@@ -74,7 +73,9 @@
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.1",
     "@total-typescript/ts-reset": "0.5.1",
-    "@types/node": "20.9.4",
+    "@tsconfig/strictest": "2.0.2",
+    "@tsconfig/vite-react": "2.0.1",
+    "@types/node": "20.10.0",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "6.12.0",
@@ -84,7 +85,7 @@
     "eslint": "8.54.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-import": "npm:eslint-plugin-i@2.29.0",
     "eslint-plugin-jest-dom": "5.1.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react": "7.33.2",
