Add eslint --report-unused-disable-directives

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
-    "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0",
+    "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0 --report-unused-disable-directives",
     "prepare": "husky install",
     "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
     "start": "vite",
