--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": ["@tsconfig/strictest/tsconfig", "@tsconfig/vite-react/tsconfig.json"],
   "compilerOptions": {
     "checkJs": false,
+    "exactOptionalPropertyTypes": false,
     "jsxImportSource": "@emotion/react",
-    "types": ["vite-plugin-svgr/client", "vitest/globals"],
+    "types": ["vitest/globals"],
     "paths": {
       "@/*": ["./src/*"]
     }
