--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "plugins": ["prettier-plugin-packagejson"],
+  "plugins": ["prettier-plugin-packagejson", "prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["clsx", "cva", "cn"],
   "printWidth": 100,
   "singleQuote": true
 }
