--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prepare": "husky install",
     "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
     "start": "vite",
+    "tailwind-config-viewer": "tailwind-config-viewer -o -p 7000 -c ./tailwind.config.js",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
     "visualize": "export VISUALIZE=true && npm run build"
@@ -40,6 +41,8 @@
     "@reflet/http": "1.0.0",
     "@tanstack/react-query": "5.17.0",
     "@tanstack/react-query-devtools": "5.17.0",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
     "dayjs": "1.11.10",
     "i18next": "23.7.15",
     "i18next-browser-languagedetector": "7.2.0",
@@ -52,6 +55,7 @@
     "react-hook-form": "7.49.2",
     "react-i18next": "14.0.0",
     "react-router-dom": "6.21.1",
+    "tailwind-merge": "2.2.0",
     "use-debounce": "10.0.0",
     "use-react-router-breadcrumbs": "4.0.1",
     "zod": "3.22.4",
@@ -77,6 +81,7 @@
     "@typescript-eslint/parser": "6.17.0",
     "@vitejs/plugin-react-swc": "3.5.0",
     "@vitest/ui": "1.1.1",
+    "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -87,6 +92,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-prefer-function-component": "3.3.0",
     "eslint-plugin-sonarjs": "0.23.0",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "50.0.1",
     "eslint-plugin-vitest": "0.3.20",
@@ -96,10 +102,15 @@
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.2.0",
     "msw": "2.0.11",
+    "postcss": "8.4.32",
+    "postcss-nesting": "12.0.2",
     "prettier": "3.1.1",
     "prettier-plugin-packagejson": "2.4.8",
+    "prettier-plugin-tailwindcss": "0.5.9",
     "rollup-plugin-visualizer": "5.12.0",
     "source-map-explorer": "2.5.3",
+    "tailwind-config-viewer": "1.7.3",
+    "tailwindcss": "3.4.0",
     "terser": "5.26.0",
     "typescript": "5.2.2",
     "vite": "5.0.10",
