--- a/package.json
+++ b/package.json
@@ -37,27 +37,38 @@
     ]
   },
   "dependencies": {
-    "@hookform/resolvers": "3.3.3",
+    "@hookform/resolvers": "3.3.4",
+    "@radix-ui/react-avatar": "1.0.4",
+    "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-scroll-area": "1.0.5",
+    "@radix-ui/react-select": "2.0.0",
+    "@radix-ui/react-separator": "1.0.3",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@radix-ui/react-tooltip": "1.0.7",
     "@reflet/http": "1.0.0",
-    "@tanstack/react-query": "5.17.0",
-    "@tanstack/react-query-devtools": "5.17.0",
+    "@tanstack/react-query": "5.17.9",
+    "@tanstack/react-query-devtools": "5.17.9",
     "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
+    "clsx": "2.1.0",
     "dayjs": "1.11.10",
-    "i18next": "23.7.15",
+    "i18next": "23.7.16",
     "i18next-browser-languagedetector": "7.2.0",
     "jotai": "2.6.1",
     "jotai-devtools": "0.7.1",
+    "lucide-react": "0.309.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.12",
-    "react-hook-form": "7.49.2",
+    "react-hook-form": "7.49.3",
     "react-i18next": "14.0.0",
-    "react-router-dom": "6.21.1",
+    "react-router-dom": "6.21.2",
+    "sonner": "1.3.1",
     "tailwind-merge": "2.2.0",
     "use-debounce": "10.0.0",
-    "use-react-router-breadcrumbs": "4.0.1",
     "zod": "3.22.4",
     "zod-fetch": "0.1.1"
   },
@@ -67,20 +78,20 @@
     "@mswjs/data": "0.16.1",
     "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
-    "@tanstack/eslint-plugin-query": "5.14.6",
-    "@testing-library/jest-dom": "6.1.6",
+    "@tanstack/eslint-plugin-query": "5.17.7",
+    "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@total-typescript/ts-reset": "0.5.1",
     "@tsconfig/strictest": "2.0.2",
     "@tsconfig/vite-react": "3.0.0",
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.47",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "@vitest/ui": "1.1.1",
+    "@vitest/ui": "1.1.3",
     "autoprefixer": "10.4.16",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -92,32 +103,33 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-prefer-function-component": "3.3.0",
     "eslint-plugin-sonarjs": "0.23.0",
-    "eslint-plugin-tailwindcss": "3.13.0",
+    "eslint-plugin-tailwindcss": "3.13.1",
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "50.0.1",
     "eslint-plugin-vitest": "0.3.20",
     "husky": "8.0.3",
     "i18next-parser": "8.12.0",
-    "jsdom": "23.0.1",
+    "jsdom": "23.2.0",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.2.0",
-    "msw": "2.0.11",
-    "postcss": "8.4.32",
+    "msw": "2.0.13",
+    "postcss": "8.4.33",
     "postcss-nesting": "12.0.2",
     "prettier": "3.1.1",
-    "prettier-plugin-packagejson": "2.4.8",
-    "prettier-plugin-tailwindcss": "0.5.9",
+    "prettier-plugin-packagejson": "2.4.9",
+    "prettier-plugin-tailwindcss": "0.5.11",
     "rollup-plugin-visualizer": "5.12.0",
     "source-map-explorer": "2.5.3",
     "tailwind-config-viewer": "1.7.3",
-    "tailwindcss": "3.4.0",
+    "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "1.0.7",
     "terser": "5.26.0",
-    "typescript": "5.2.2",
-    "vite": "5.0.10",
+    "typescript": "5.3.3",
+    "vite": "5.0.11",
     "vite-plugin-checker": "0.6.2",
     "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "4.2.3",
-    "vitest": "1.1.1"
+    "vitest": "1.1.3"
   },
   "engines": {
     "node": "18 || 20",
