--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwind-config-viewer": "tailwind-config-viewer -o -p 7000 -c ./tailwind.config.js",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
+    "update-dependencies": "ncu -u && npm i",
     "visualize": "export VISUALIZE=true && npm run build"
   },
   "lint-staged": {
@@ -49,16 +50,16 @@
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
     "@reflet/http": "1.0.0",
-    "@tanstack/react-query": "5.17.12",
-    "@tanstack/react-query-devtools": "5.17.12",
+    "@tanstack/react-query": "5.17.14",
+    "@tanstack/react-query-devtools": "5.17.14",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
     "i18next": "23.7.16",
     "i18next-browser-languagedetector": "7.2.0",
-    "jotai": "2.6.1",
+    "jotai": "2.6.2",
     "jotai-devtools": "0.7.1",
-    "lucide-react": "0.309.0",
+    "lucide-react": "0.310.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -85,7 +86,7 @@
     "@total-typescript/ts-reset": "0.5.1",
     "@tsconfig/strictest": "2.0.2",
     "@tsconfig/vite-react": "3.0.0",
-    "@types/node": "20.11.2",
+    "@types/node": "20.11.4",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.19.0",
@@ -113,6 +114,7 @@
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.2.0",
     "msw": "2.1.0",
+    "npm-check-updates": "16.14.12",
     "postcss": "8.4.33",
     "postcss-nesting": "12.0.2",
     "prettier": "3.2.2",
