Various minor improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "exactOptionalPropertyTypes": false,
     "types": ["vitest/globals"],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+    },
   },
   "include": ["src"],
   "exclude": ["node_modules"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
 }
