--- a/package.json
+++ b/package.json
@@ -50,23 +50,23 @@
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
     "@reflet/http": "1.0.0",
-    "@tanstack/react-query": "5.17.15",
-    "@tanstack/react-query-devtools": "5.17.15",
+    "@tanstack/react-query": "5.17.19",
+    "@tanstack/react-query-devtools": "5.17.19",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
-    "i18next": "23.7.16",
+    "i18next": "23.7.18",
     "i18next-browser-languagedetector": "7.2.0",
     "jotai": "2.6.2",
     "jotai-devtools": "0.7.1",
-    "lucide-react": "0.311.0",
+    "lucide-react": "0.312.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.12",
     "react-hook-form": "7.49.3",
-    "react-i18next": "14.0.0",
-    "react-router-dom": "6.21.2",
+    "react-i18next": "14.0.1",
+    "react-router-dom": "6.21.3",
     "sonner": "1.3.1",
     "tailwind-merge": "2.2.0",
     "use-debounce": "10.0.0",
@@ -79,21 +79,22 @@
     "@mswjs/data": "0.16.1",
     "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
-    "@tanstack/eslint-plugin-query": "5.17.7",
+    "@tanstack/eslint-plugin-query": "5.17.20",
     "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@total-typescript/ts-reset": "0.5.1",
     "@tsconfig/strictest": "2.0.2",
     "@tsconfig/vite-react": "3.0.0",
-    "@types/node": "20.11.4",
+    "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "@vitest/ui": "1.2.0",
-    "autoprefixer": "10.4.16",
+    "@vitest/ui": "1.2.1",
+    "autoprefixer": "10.4.17",
+    "confusing-browser-globals": "1.0.11",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -109,14 +110,14 @@
     "eslint-plugin-vitest": "0.3.20",
     "husky": "8.0.3",
     "i18next-parser": "8.12.0",
-    "jsdom": "23.2.0",
+    "jsdom": "24.0.0",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.2.0",
-    "msw": "2.1.0",
+    "msw": "2.1.2",
     "npm-check-updates": "16.14.12",
     "postcss": "8.4.33",
     "postcss-nesting": "12.0.2",
-    "prettier": "3.2.2",
+    "prettier": "3.2.4",
     "prettier-plugin-packagejson": "2.4.9",
     "prettier-plugin-tailwindcss": "0.5.11",
     "rollup-plugin-visualizer": "5.12.0",
@@ -124,13 +125,13 @@
     "tailwind-config-viewer": "1.7.3",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
-    "terser": "5.26.0",
+    "terser": "5.27.0",
     "typescript": "5.3.3",
-    "vite": "5.0.11",
+    "vite": "5.0.12",
     "vite-plugin-checker": "0.6.2",
     "vite-plugin-svgr": "4.2.0",
-    "vite-tsconfig-paths": "4.3.0",
-    "vitest": "1.2.0"
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "1.2.1"
   },
   "engines": {
     "node": "18 || 20",
