--- a/package.json
+++ b/package.json
@@ -15,22 +15,21 @@
   "type": "module",
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'dist/assets/*.js' --no-border-checks",
-    "build": "tsc --noEmit && vite build",
+    "build": "tsc && vite build",
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
-    "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0 --report-unused-disable-directives",
+    "lint": "eslint \"./**/*.{js,cjs,ts,tsx}\" --max-warnings 0 --report-unused-disable-directives",
     "prepare": "husky install",
     "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
     "start": "vite",
-    "tailwind-config-viewer": "tailwind-config-viewer -o -p 7000 -c ./tailwind.config.js",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
     "update-dependencies": "ncu -u && npm i",
     "visualize": "export VISUALIZE=true && npm run build"
   },
   "lint-staged": {
-    "*.{js,cjs,mjs,ts,tsx}": [
+    "*.{js,cjs,ts,tsx}": [
       "eslint --fix"
     ],
     "**/*": [
@@ -51,7 +50,7 @@
     "@radix-ui/react-tooltip": "1.0.7",
     "@reflet/http": "1.0.0",
     "@tanstack/react-query": "5.17.19",
-    "@tanstack/react-query-devtools": "5.17.19",
+    "@tanstack/react-query-devtools": "5.17.21",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
@@ -59,7 +58,7 @@
     "i18next-browser-languagedetector": "7.2.0",
     "jotai": "2.6.2",
     "jotai-devtools": "0.7.1",
-    "lucide-react": "0.312.0",
+    "lucide-react": "0.314.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -68,7 +67,7 @@
     "react-i18next": "14.0.1",
     "react-router-dom": "6.21.3",
     "sonner": "1.3.1",
-    "tailwind-merge": "2.2.0",
+    "tailwind-merge": "2.2.1",
     "use-debounce": "10.0.0",
     "zod": "3.22.4",
     "zod-fetch": "0.1.1"
@@ -80,7 +79,7 @@
     "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
     "@tanstack/eslint-plugin-query": "5.17.20",
-    "@testing-library/jest-dom": "6.2.0",
+    "@testing-library/jest-dom": "6.2.1",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
     "@total-typescript/ts-reset": "0.5.1",
@@ -89,8 +88,8 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.19.0",
-    "@typescript-eslint/parser": "6.19.0",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
     "@vitejs/plugin-react-swc": "3.5.0",
     "@vitest/ui": "1.2.1",
     "autoprefixer": "10.4.17",
@@ -113,7 +112,7 @@
     "jsdom": "24.0.0",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.2.0",
-    "msw": "2.1.2",
+    "msw": "2.1.3",
     "npm-check-updates": "16.14.12",
     "postcss": "8.4.33",
     "postcss-nesting": "12.0.2",
@@ -122,7 +121,6 @@
     "prettier-plugin-tailwindcss": "0.5.11",
     "rollup-plugin-visualizer": "5.12.0",
     "source-map-explorer": "2.5.3",
-    "tailwind-config-viewer": "1.7.3",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "1.0.7",
     "terser": "5.27.0",
