--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
     "lint": "eslint \"./**/*.{js,cjs,ts,tsx}\" --max-warnings 0 --report-unused-disable-directives",
-    "prepare": "husky install",
+    "prepare": "husky",
     "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
     "start": "vite",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
@@ -49,16 +49,16 @@
     "@radix-ui/react-tabs": "1.0.4",
     "@radix-ui/react-tooltip": "1.0.7",
     "@reflet/http": "1.0.0",
-    "@tanstack/react-query": "5.17.19",
-    "@tanstack/react-query-devtools": "5.17.21",
+    "@tanstack/react-query": "5.18.0",
+    "@tanstack/react-query-devtools": "5.18.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "dayjs": "1.11.10",
-    "i18next": "23.7.18",
+    "i18next": "23.8.2",
     "i18next-browser-languagedetector": "7.2.0",
-    "jotai": "2.6.2",
+    "jotai": "2.6.4",
     "jotai-devtools": "0.7.1",
-    "lucide-react": "0.314.0",
+    "lucide-react": "0.320.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -66,7 +66,7 @@
     "react-hook-form": "7.49.3",
     "react-i18next": "14.0.1",
     "react-router-dom": "6.21.3",
-    "sonner": "1.3.1",
+    "sonner": "1.4.0",
     "tailwind-merge": "2.2.1",
     "use-debounce": "10.0.0",
     "zod": "3.22.4",
@@ -78,20 +78,20 @@
     "@mswjs/data": "0.16.1",
     "@swc-jotai/debug-label": "0.1.0",
     "@swc-jotai/react-refresh": "0.1.0",
-    "@tanstack/eslint-plugin-query": "5.17.20",
-    "@testing-library/jest-dom": "6.2.1",
-    "@testing-library/react": "14.1.2",
+    "@tanstack/eslint-plugin-query": "5.18.0",
+    "@testing-library/jest-dom": "6.4.0",
+    "@testing-library/react": "14.2.0",
     "@testing-library/user-event": "14.5.2",
     "@total-typescript/ts-reset": "0.5.1",
     "@tsconfig/strictest": "2.0.2",
     "@tsconfig/vite-react": "3.0.0",
-    "@types/node": "20.11.5",
+    "@types/node": "20.11.14",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
     "@vitejs/plugin-react-swc": "3.5.0",
-    "@vitest/ui": "1.2.1",
+    "@vitest/ui": "1.2.2",
     "autoprefixer": "10.4.17",
     "confusing-browser-globals": "1.0.11",
     "eslint": "8.56.0",
@@ -103,21 +103,21 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-sonarjs": "0.23.0",
-    "eslint-plugin-tailwindcss": "3.14.0",
+    "eslint-plugin-tailwindcss": "3.14.1",
     "eslint-plugin-testing-library": "6.2.0",
     "eslint-plugin-unicorn": "50.0.1",
-    "eslint-plugin-vitest": "0.3.20",
-    "husky": "8.0.3",
+    "eslint-plugin-vitest": "0.3.21",
+    "husky": "9.0.7",
     "i18next-parser": "8.12.0",
     "jsdom": "24.0.0",
     "jsdom-testing-mocks": "1.11.0",
-    "lint-staged": "15.2.0",
-    "msw": "2.1.3",
-    "npm-check-updates": "16.14.12",
+    "lint-staged": "15.2.1",
+    "msw": "2.1.5",
+    "npm-check-updates": "16.14.14",
     "postcss": "8.4.33",
     "postcss-nesting": "12.0.2",
     "prettier": "3.2.4",
-    "prettier-plugin-packagejson": "2.4.9",
+    "prettier-plugin-packagejson": "2.4.10",
     "prettier-plugin-tailwindcss": "0.5.11",
     "rollup-plugin-visualizer": "5.12.0",
     "source-map-explorer": "2.5.3",
@@ -126,10 +126,10 @@
     "terser": "5.27.0",
     "typescript": "5.3.3",
     "vite": "5.0.12",
-    "vite-plugin-checker": "0.6.2",
+    "vite-plugin-checker": "0.6.3",
     "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "4.3.1",
-    "vitest": "1.2.1"
+    "vitest": "1.2.2"
   },
   "engines": {
     "node": "18 || 20",
