--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "i18n": "i18next",
     "lint": "eslint \"./**/*.{js,cjs,ts,tsx}\" --max-warnings 0 --report-unused-disable-directives",
     "prepare": "husky",
-    "preview": "export IS_PREVIEW=true && vite build && vite preview --port 3000",
+    "preview": "vite build && vite preview --port 3000",
     "start": "vite",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
